--- a/index.html
+++ b/index.html
@@ -7,18 +7,75 @@
 	<title>Document</title>
 
 	<link rel="stylesheet" href="css/footer.css">
+	<script src=""></script>
+
 </head>
 
 <body>
 	<footer id="footer" class="bg-dark text-color-light">
-		<div class="">
-			<div class="container container-custom-lg h-auto">
-				<div class="section-p w-100 position-relative">
-					Главная
 
+
+		<div class="container container-custom-lg h-auto">
+			<div class="section-p w-100 position-relative">
+				<div class="f-grid">
+					<div class="f-logo">
+						<img class="f-logo__img" src="./img/logo-light.svg" alt="">
+						<span class="f-logo__text">Платформа для создания <br /> веб-сайтов и приложений</span>
+					</div>
+					<nav class="f-nav">
+						<div class="f-nav__item">
+							<a href="#" class="f-nav__link">Главная</a>
+						</div>
+						<div class="f-nav__item">
+							<div class="f-nav__link-box">
+								<a href="#" class="f-nav__link">Возможности</a>
+								<i class="f-nav__btn bi bi-plus"></i>
+							</div>
+							<div class="f-nav__dropdown">
+								<a href="#">Предпринимателям</a>
+								<a href="#">Разработчикам</a>
+								<a href="#">Корпоративное решение</a>
+							</div>
+						</div>
+						<div class="f-nav__item">
+							<a href="#" class="f-nav__link">Шаблоны</a>
+						</div>
+						<div class="f-nav__item">
+							<a href="#" class="f-nav__link">Тарифы</a>
+						</div>
+						<div class="f-nav__item">
+							<div class="f-nav__link-box">
+								<a href="#" class="f-nav__link">Документация</a>
+								<i class="f-nav__btn bi bi-plus"></i>
+							</div>
+							<div class="f-nav__dropdown">
+								<a href="#">База знаний</a>
+								<a href="#">Структура</a>
+							</div>
+						</div>
+						<div class="f-nav__item">
+							<a href="#" class="f-nav__link">Блог</a>
+						</div>
+					</nav>
+					<div class="f-info">
+						<div class="d-not-empty opacity-5 section-buttons f-info__box">
+							<a href="https://app.from.biz/register/390136/" class="btn btn-outline btn-sm" target="_blank"><i class="bi bi-plus"></i> &nbsp;Создать
+								сайт</a>
+							<a href="https://vk.com/ru.from" class="btn btn-outline btn-sm" target="_blank"><i class="fi fi-vk"></i></a>
+							<a href="https://t.me/frombiz" class="btn btn-outline btn-sm" target="_blank"><i class="bi bi-telegram"></i></a>
+							<a href="#" class="btn btn-outline btn-sm" target="_blank"><i class="bi bi-youtube"></i></a>
+						</div>
+						<p class="f-info__text">
+							Свидетельство о государственной регистрации программы для ЭВМ № 2023618699
+
+						</p>
+					</div>
 				</div>
+
 			</div>
 		</div>
+
+
 		<div class="border-top">
 			<div class="container container-custom-lg h-auto">
 				<div class="section-p w-100 position-relative f-bottom">
@@ -39,6 +96,8 @@
 			</div>
 		</div>
 	</footer>
+
+	<script src="./js/common.js"></script>
 </body>
 
 </html>
