--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<footer id="footer" class="bg-dark text-color-light">
+	<footer id="footer" class="footer bg-dark text-color-light">
 
 
 		<div class="container container-custom-lg h-auto">
